--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap"
 			rel="stylesheet"
 		/>
-		/>
 		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 
@@ -79,19 +78,39 @@
 							</div>
 							<ul class="footer__social">
 								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">Facebook</a>
+									<a
+										class="footer__social-link footer__social-link--facebook"
+										href="#"
+										>Facebook</a
+									>
 								</li>
 								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">Instagram</a>
+									<a
+										class="footer__social-link footer__social-link--instagram"
+										href="#"
+										>Instagram</a
+									>
 								</li>
 								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">Pinterest</a>
+									<a
+										class="footer__social-link footer__social-link--pinterest"
+										href="#"
+										>Pinterest</a
+									>
 								</li>
 								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">WhatsApp</a>
+									<a
+										class="footer__social-link footer__social-link--whatsapp"
+										href="#"
+										>WhatsApp</a
+									>
 								</li>
 								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">Youtube</a>
+									<a
+										class="footer__social-link footer__social-link--youtube"
+										href="#"
+										>Youtube</a
+									>
 								</li>
 							</ul>
 							<nav class="footer__menu">
