--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,16 @@
 						</div>
 					</div>
 				</section>
+				<section class="new-collection">
+					<div class="container-fluid">
+						<h3 class="new-collection__title">Furniture new collection</h3>
+						<p class="new-collection__text">
+							Deep v you probably haven't heard of them banh mi synth actually
+							affogato. Aesthetic lyft ethical drinking vinegar austint
+						</p>
+						<div class="collection"></div>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">
 				<div class="footer__content">
