--- a/app/about.html
+++ b/app/about.html
@@ -122,7 +122,12 @@
 						</div>
 					</div>
 					<div class="about__popup">
-						<a class="about__popup-play" href="#">
+						<a
+							class="about__popup-play"
+							data-fancybox
+							data-type="iframe"
+							data-src="https://www.youtube.com/embed/htrPEvNIzXI?autoplay=1&rel=0"
+						>
 							<img
 								class="about__popup-imgbtn"
 								src="images/play-button.svg"
