--- a/app/about.html
+++ b/app/about.html
@@ -154,35 +154,37 @@
 								<ul class="inspiration__list">
 									<li class="inspiration__item">
 										<div class="inspiration__item-content">
-											<p class="inspiration__text">
+											<p class="inspiration__item-text">
 												Design and technical drawings
 											</p>
 											<p class="inspiration__num">80%</p>
 										</div>
-										<div class="inspiration__line"></div>
+										<div class="inspiration__line" style="width: 40%"></div>
 									</li>
 									<li class="inspiration__item">
 										<div class="inspiration__item-content">
-											<p class="inspiration__text">Measurments</p>
+											<p class="inspiration__item-text">Measurments</p>
 											<p class="inspiration__num">70%</p>
 										</div>
-										<div class="inspiration__line"></div>
+										<div class="inspiration__line" style="width: 75%"></div>
 									</li>
 									<li class="inspiration__item">
 										<div class="inspiration__item-content">
-											<p class="inspiration__text">
+											<p class="inspiration__item-text">
 												Furniture functionality analysis
 											</p>
 											<p class="inspiration__num">75%</p>
 										</div>
-										<div class="inspiration__line"></div>
+										<div class="inspiration__line" style="width: 70%"></div>
 									</li>
 									<li class="inspiration__item">
 										<div class="inspiration__item-content">
-											<p class="inspiration__text">Interior visualization</p>
+											<p class="inspiration__item-text">
+												Interior visualization
+											</p>
 											<p class="inspiration__num">40%</p>
 										</div>
-										<div class="inspiration__line"></div>
+										<div class="inspiration__line" style="width: 80%"></div>
 									</li>
 								</ul>
 							</div>
