--- a/app/contacts.html
+++ b/app/contacts.html
@@ -94,6 +94,77 @@
 						referrerpolicy="no-referrer-when-downgrade"
 					></iframe>
 				</div>
+
+				<section class="contact">
+					<div class="container">
+						<h3 class="contact__title">Contact Us</h3>
+						<ul class="contact__social">
+							<li class="contact__social-item">
+								<a class="contact__social-link" href="#"
+									><img
+										class="contact__social-link"
+										src="images/facebook.svg"
+										alt="facebook"
+								/></a>
+							</li>
+							<li class="contact__social-item">
+								<a class="contact__social-link" href="#"
+									><img
+										class="contact__social-link"
+										src="images/instagram.svg"
+										alt="instagram"
+								/></a>
+							</li>
+							<li class="contact__social-item">
+								<a class="contact__social-link" href="#"
+									><img
+										class="contact__social-link"
+										src="images/Pinterest.svg"
+										alt="Pinterest"
+								/></a>
+							</li>
+							<li class="contact__social-item">
+								<a class="contact__social-link" href="#"
+									><img
+										class="contact__social-link"
+										src="images/whatsapp.svg"
+										alt="whatsapp"
+								/></a>
+							</li>
+							<li class="contact__social-item">
+								<a class="contact__social-link" href="#"
+									><img
+										class="contact__social-link"
+										src="images/youtube.svg"
+										alt="youtube"
+								/></a>
+							</li>
+						</ul>
+						<a class="contact__phone" href="tel:+14158297934">(415) 829-7934</a>
+						<div class="contact__st">725 Green St</div>
+						<div class="contact_city">San Francisco, California(CA), 94133</div>
+						<a class="info-email" href="mailto:ouremailaddress@email.com">
+							ouremailaddress@email.com
+						</a>
+						<form class="contact__form" action="">
+							<input
+								class="contact__form-input"
+								placeholder="Your name"
+								type="text"
+							/>
+							<input
+								class="contact__form-input"
+								placeholder="Your e-mail"
+								type="email"
+							/>
+							<textarea
+								class="contact__form-area"
+								placeholder="message"
+							></textarea>
+							<button class="contact__form-btn" type="submit">Send</button>
+						</form>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">
 				<div class="footer__content">
@@ -105,10 +176,7 @@
 									Keffiyeh poutine etsy, paleo cray put a bird on it microdosing
 									schlitz you probably occupy
 								</p>
-								<a
-									class="footer__info-email"
-									href="mailto:ouremailaddress@email.com"
-								>
+								<a class="info-email" href="mailto:ouremailaddress@email.com">
 									ouremailaddress@email.com
 								</a>
 								<form class="footer__form">
