--- a/app/blog.html
+++ b/app/blog.html
@@ -180,7 +180,10 @@
 								</div>
 
 								<div class="pagination">
-									<a class="pagination__arrow" href="#">
+									<a
+										class="pagination__arrow pagination__arrow--disabled"
+										href="#"
+									>
 										<img
 											class="pagination__arrow-icon"
 											src="images/arrow-left.svg"
