--- a/app/blog.html
+++ b/app/blog.html
@@ -21,23 +21,27 @@
 						<nav class="menu">
 							<ul class="menu__list">
 								<li class="menu__list-item">
-									<a class="menu__list-link" href="#">About</a>
+									<a class="menu__list-link" href="about.html">About</a>
 								</li>
 								<li class="menu__list-item">
-									<a class="menu__list-link" href="#">Gallery</a>
+									<a class="menu__list-link" href="gallery.html">Gallery</a>
 								</li>
 							</ul>
 						</nav>
-						<a class="logo" href="#">
-							<img src="images/logo.png" alt="logo" />
+						<a class="logo" href="index.html">
+							<img src="images/logo.svg" alt="logo" />
 						</a>
 						<nav class="menu">
 							<ul class="menu__list">
 								<li class="menu__list-item">
-									<a class="menu__list-link" href="#">Blog</a>
+									<a
+										class="menu__list-link menu__list-link--active"
+										href="blog.html"
+										>Blog</a
+									>
 								</li>
 								<li class="menu__list-item">
-									<a class="menu__list-link" href="#">Contact</a>
+									<a class="menu__list-link" href="contacts.html">Contact</a>
 								</li>
 							</ul>
 						</nav>
@@ -50,7 +54,7 @@
 							</button>
 							<div class="rightside-menu__content">
 								<a class="rightside-menu__logo" href="#">
-									<img src="images/logo-big.png" alt="big logo" />
+									<img src="images/logo-big.svg" alt="big logo" />
 								</a>
 								<h4 class="rightside-menu__title">Furniture for life</h4>
 								<p class="rightside-menu__text">
@@ -206,11 +210,11 @@
 											>
 										</li>
 										<li class="pagination__list-item">
-											<a class="pagination__list-num" href="#">2</a>
+											<a class="pagination__list-num" href="blog-one.html">2</a>
 										</li>
 									</ul>
 
-									<a class="pagination__arrow" href="#">
+									<a class="pagination__arrow" href="blog-one.html">
 										<img
 											class="pagination__arrow-icon"
 											src="images/arrow-right.svg"
