--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
 								</li>
 							</ul>
 						</nav>
+
 						<a class="logo" href="index.html">
 							<img src="images/logo.svg" alt="logo" />
 						</a>
@@ -41,6 +42,11 @@
 								</li>
 							</ul>
 						</nav>
+						<button class="header__btn-menu">
+							<span></span>
+							<span></span>
+							<span></span>
+						</button>
 						<button class="header__btn">
 							<img src="images/icon_menu.svg" alt="icon_menu" />
 						</button>
@@ -60,7 +66,7 @@
 								</p>
 								<img
 									class="rightside-menu__images"
-									src="images/content/rightside-img.jpg"
+									src="images/rightside-img.jpg"
 									alt="rightside-img"
 								/>
 							</div>
